# novella

./: README.md  TODO.md  pyproject.toml  story.json
cli/: __main__.py  chapter.py  compile.py  init.py
gui/: app.py  main.py
novella/: __init__.py  __main__.py  chapter.py  compile.py  init.py  metadata.py  story.py
tests/: story_test.py  test_chapter.py  test_cli.py  test_compile.py  test_init.py  test_novella.py  test_novella_temp.py
